--- a/src/components/introduction/introduction.css
+++ b/src/components/introduction/introduction.css
@@ -20,7 +20,7 @@ body {
 
 .intro-left-wrapper {
     padding: 30px;
-    font-size: 30px;
+    /* font-size: 30px; */
     height: 40%;
     display: flex;
     flex-direction: column;
@@ -38,6 +38,7 @@ body {
 
 .intro-description {
     font-size: 40px;
+    
 }
 
 .intro-skill-title {
@@ -50,6 +51,8 @@ body {
 }
 
 .intro-skills-wrapper {
+    font-size: 40px;
+    font-weight: bold;
     height: 100%;
     animation: move 5s linear alternate infinite;
 }
@@ -68,8 +71,15 @@ body {
 
 .intro-skills-item {
     height: 40px;  {/*1 item*/} 
-    font-size: 30px;
-    font-weight: bold;
     display: flex;
     align-items: center;
+
 }
+
+.intro-img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    padding: 30px;
+}
+
