--- a/src/components/introduction/introduction.css
+++ b/src/components/introduction/introduction.css
@@ -1,7 +1,3 @@
-body {
-    background-color: #e6e6fa;
-}
-
 .intro {
     display: flex;
     height: 100vh;
@@ -19,7 +15,7 @@ body {
 }
 
 .intro-left-wrapper {
-    padding: 30px;
+    padding: 40px;
     /* font-size: 30px; */
     height: 40%;
     display: flex;
@@ -28,7 +24,7 @@ body {
 }
 
 .intro-greetings {
-    font-size: 40px;
+    font-size: 35px;
     font-weight: 300;
 }
 
@@ -37,7 +33,7 @@ body {
 }
 
 .intro-description {
-    font-size: 40px;
+    font-size: 35px;
     
 }
 
@@ -76,10 +72,14 @@ body {
 
 }
 
+.intro-right {
+    padding-top: 40px;
+    /* padding-left: 80px; */
+}
+
 .intro-img {
     width: 100%;
     height: 100%;
     object-fit: contain;
-    padding: 30px;
 }
 
