--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,16 @@
+html{
+    width: 100%;
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
+body
+{
+  width: 100%;
+  max-width: 100%;
+  overflow-x: hidden;
+}
+
 .portfolio-bg {
     background: #e6e6fa;
 }
