--- a/src/projects/projects.css
+++ b/src/projects/projects.css
@@ -5,7 +5,7 @@
     padding: 0 20px;
     flex-direction: column;
     justify-content: flex-start;
-    padding-top: 100px;
+    padding-top: 40px;
     padding-bottom: 60px;
 }
 
@@ -28,9 +28,21 @@
 }
 
 .projects {
+    margin-top: 20px;
     width: 100%;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     justify-items: center;
+}
 
+@media screen and (max-width: 1100px) {
+    .projects {
+        grid-template-columns: 1fr 1fr;
+    }
+}
+
+@media screen and (max-width: 720px) {
+    .projects {
+        grid-template-columns: 1fr;
+    }
 }
