--- a/src/projects/projects.css
+++ b/src/projects/projects.css
@@ -46,3 +46,11 @@
         grid-template-columns: 1fr;
     }
 }
+
+@media screen and (max-height: 880px) {
+    .block-container {
+        padding-top: 70px;
+    }
+}
+
+
