--- a/src/components/introduction/introduction.css
+++ b/src/components/introduction/introduction.css
@@ -1,7 +1,6 @@
 .intro {
     display: flex;
     height: 100vh;
-    flex-direction: row;
 }
 
 .intro-left {
@@ -43,38 +42,23 @@
 }
 
 .intro-skills {
+    margin-top: 40px;
     height: 40px;
-    overflow: hidden;
 }
 
 .intro-skills-wrapper {
-    font-size: 40px;
-    font-weight: bold;
-    height: 100%;
-    animation: move 5s ease-in-out infinite alternate ;
-}
-
-@keyframes move {
-    34% {
-        transform: translateY(-40px);
-    }
-    67% {
-        transform: translateY(-80px);
-    }
-    100% {
-        transform: translateY(-120px);
-    }
-}
-
-.intro-skills-item {
-    height: 40px;  {/*1 item*/} 
     display: flex;
-    align-items: center;
+    justify-content: flex-start;
+    height: 100%;
+}
+
+.skill-icon {
+    width: 100px;
+    height: 100px;
 }
 
 .intro-right {
     padding-top: 40px;
-    display: flex;
 }
 
 .intro-img {
@@ -82,80 +66,3 @@
     height: 90%;
     object-fit: contain;
 }
-
-@media screen and (max-width: 1486px) {
-    .intro-left {
-        align-items:flex-start;
-        margin-top: 170px;
-    }
-}
-
-@media screen and (max-width: 1483px) {
-    .intro-skills {
-        height: 40px;
-        overflow:visible;
-    }
-    
-    .intro-skills-wrapper {
-        font-size: 40px;
-        font-weight: bold;
-        height: 100%;
-        animation: none;
-        -webkit-animation: none;
-}
-    .intro-skills-item {
-        color: #8d57b4;
-    }
-}
-
-@media screen and (max-width: 900px) {
-    .intro {
-        flex-direction: column;
-        height: 130vh;
-    }
-    .intro-right {
-        margin-top: 200px;
-        justify-content: center;
-    }
-    .intro-img {
-        width: 70%;
-        height: 70%;
-        object-fit: contain;
-    }
-    .intro-left {
-        text-align: center;
-    }
-    .intro-skills-wrapper {
-        text-align: center;
-    }
-}
-
-@media screen and (max-width: 530px) {
-    .intro-greetings {
-        font-size: 30px;
-    } 
-    .intro-name {
-        font-size: 80px;
-    }
-    .intro-description {
-        font-size: 30px;
-        
-    }
-    .intro-skill-title {
-        font-size: 25px;
-    }
-    .intro-skills-wrapper {
-        text-align: center;
-    }
-}
-
-@media screen and (max-height: 880px) {
-    .intro-right {
-        margin-top: 80px;
-    }
-}
-
-
-
-
-
