some fixes in layot and add skill icons

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
-.portfolio-bg {
-  background: #e6e6fa;
+html{
+  background: #e6e6fa no-repeat;
+  background-size: 100%;
 }
+
+
+
+/* .portfolio-bg {
+    background: #e6e6fa no-repeat;
+    background-size: 100%;
+} */
+
