--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,8 +1,5 @@
 .footer {
     background-color: #e6d2fc;
-    height: 7vh;
-    /* display: block; */
-    /* position: absolute; */
 }
 
 .footer-wrapper {
@@ -10,23 +7,20 @@
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
-    padding: 23px;
+    padding: 20px;
 }
 
 .footer-reserved {
-    text-align: center;
-    font-weight: 600;
-    text-transform: uppercase;
-    line-height: 1.2;
-    color: $cod-gray;
     margin: 0;
+    font-size: 14px;
+    line-height: 2em;
+    color: $cod-gray;
 }
 
-.footer-link {
+.footer-linkk {
     color: #000;
     transition: 0.5s all;
     text-decoration: none;
-    margin: 0 0 0px;
     font-weight: 600;
 }
 
