--- a/src/components/introduction/introduction.css
+++ b/src/components/introduction/introduction.css
@@ -1,6 +1,6 @@
 .intro {
     display: flex;
-    height: 100vh;
+    padding: 60px;
 }
 
 .intro-left {
@@ -15,7 +15,6 @@
 }
 
 .intro-left-wrapper {
-    padding: 40px;
     /* font-size: 30px; */
     height: 40%;
     display: flex;
@@ -42,8 +41,9 @@
 }
 
 .intro-skills {
-    margin-top: 40px;
+    margin-top: 10px;
     height: 40px;
+    margin-left: -14px;
 }
 
 .intro-skills-wrapper {
@@ -53,6 +53,7 @@
 }
 
 .skill-icon {
+    padding-right: 30px;
     width: 100px;
     height: 100px;
 }
@@ -62,7 +63,9 @@
 }
 
 .intro-img {
-    width: 90%;
-    height: 90%;
+    width: 95%;
+    height: 95%;
     object-fit: contain;
 }
+
+/* @media screen and (max-width: ) */
