--- a/src/components/contacts/contacts.css
+++ b/src/components/contacts/contacts.css
@@ -15,6 +15,7 @@
 .contacts-title {
     font-size: 60px;
     margin-bottom: 80px;
+    white-space: pre;
 }
 
 .contacts-info-item {
@@ -24,6 +25,7 @@
     font-weight: 300px;
     width: 70%;
     font-size: 30px;
+    white-space: pre;
 }
 
 .contacts-icon {
@@ -98,3 +100,75 @@ textarea {
       margin-top: 10px;
       width: 100%;
   }
+
+  @media screen and (max-width: 1300px) {
+    .contacts-wrapper {
+        flex-direction: column;
+    }
+    .contacts-right {
+        margin-top: 50px;
+    }
+}
+
+  @media screen and (max-width: 1140px) {
+    .contacts-wrapper {
+        flex-direction: column;
+    }
+    .contacts-right {
+        margin-top: 50px;
+    }
+}
+
+@media screen and (max-width: 750px) {
+    .contacts-title {
+        font-size: 50px;
+    }
+
+    .contacts-info-item {
+        font-size: 25px;
+    }
+    .contacts-icon {
+        margin-right: 50px;
+    }
+}
+
+@media screen and (max-width: 611px) {
+    .contacts-title {
+        font-size: 50px;
+    }
+
+    .contacts-info-item {
+        font-size: 25px;
+    }
+    .contacts-icon {
+        width: 70px;
+        height: 70px;
+        margin-right: 30px;
+    }
+}
+
+@media screen and (max-width: 541px) {
+    .contacts-title {
+        font-size: 40px;
+    }
+    .contacts-info-item {
+        font-size: 20px;
+    }
+    .contacts-icon {
+        width: 70px;
+        height: 70px;
+        margin-right: 30px;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .contacts-wrapper {
+        padding-left: 45px;
+    }
+    .contacts-title {
+        font-size: 30px;
+    }
+    .contacts-info-item {
+        font-size: 15px;
+    }
+}
