--- a/src/components/introduction/introduction.css
+++ b/src/components/introduction/introduction.css
@@ -112,7 +112,7 @@
         font-size: 25px;
     }
     .intro-skills {
-        margin-left: 0;
+        margin-left: -7px;
     }
     .skill-icon {
         width: 60px;
