add navigation. some changes and fixes

--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -14,7 +14,7 @@
     margin: 0;
     font-size: 14px;
     line-height: 2em;
-    color: $cod-gray;
+    color: cod-gray;
     font-weight: 600;
 }
 
