--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,12 +1,73 @@
-.header-wrapper {
-    height: 100px;
-    background-color: #0082D1;
-    border-bottom: 4px solid black;
+.header {
+    height: 80px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    position: fixed;  
+    top: 0;  
+    z-index: 1000;  
+    width: 100%; 
+    background: #e6d2fc;
+    padding: 0 20px 0 0;
 }
 
-.header-title {
-    text-align: center;
-    padding-top: 23px;
-    color: #FFD100;
-    font-size: 50px;
+@media screen and (max-width: 1310px) {
+    .header {
+        height: 80px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: fixed;  
+        top: 0;  
+        z-index: 1000;  
+        width: 100%; 
+        background: #e6d2fc;
+        padding: 0 20px 0 0;
+    }
+    
+}
+
+@media screen and (max-width: 800px) {
+    .header {
+        height: 80px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: fixed;  
+        top: 0;  
+        z-index: 1000;  
+        width: 100%; 
+        background: #e6d2fc;
+        padding: 0 20px 0 0;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .header {
+        height: 80px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: fixed;  
+        top: 0;  
+        z-index: 1000;  
+        width: 100%; 
+        background: #e6d2fc;
+        padding: 0 20px 0 0;
+    }
+}
+
+@media screen and (max-width: 550px) {
+    .header {
+        height: 80px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: fixed;  
+        top: 0;  
+        z-index: 1000;  
+        width: 100%; 
+        background: #e6d2fc;
+        padding: 0 20px 0 0;
+    }
 }
