--- a/src/components/projects/project/project.css
+++ b/src/components/projects/project/project.css
@@ -3,12 +3,12 @@
     height: 320px;
     border-radius: 15px;
     padding: 1.5rem;
-    background: $white;
+    background: white;
     position: relative;
     display: flex;
     align-items: flex-end;
     transition: 0.4s ease-out;
-    box-shadow: 0px 7px 10px rgba($cod-gray, 0.5);
+    box-shadow: 0px 7px 10px rgba(cod-gray, 0.5);
     margin-bottom: 50px;
 }
 
@@ -27,7 +27,6 @@
 .project-info {
     position: relative;
     z-index: 100;
-    @include text-button('Poppins', 16px, 500, 1.75em);
     opacity: 0.9;
     transition: 0.5s;
 }
@@ -40,10 +39,11 @@ h1 {
     letter-spacing: 1px;
     font-size: 15px;
     margin-top: 20px;
+    font-weight: 500;
   }
 
-  a.link:active, /* активная/посещенная ссылка */
-  a.link:hover,  /* при наведении */
+  a.link:active,
+  a.link:hover, 
   a.link {
     text-decoration: none;
     color: black;
@@ -87,4 +87,19 @@ h1 {
   }
   .btn:hover {
     box-shadow: 0 0 40px 40px #e6e6fa inset;
+  }
+
+  .private {
+    background-color: transparent;
+    border: 2px solid #000;
+    border-radius: 0.6em;
+    color: #000;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1;
+    margin-top: 20px;
+    padding: 1.2em 2.8em;
+    text-align: center;
+    text-transform: uppercase;
+    font-weight: 700;
   }
