--- a/src/components/introduction/introduction.css
+++ b/src/components/introduction/introduction.css
@@ -143,6 +143,14 @@
         margin-top: 100px;
         width: 50%;
     }
+    .skill-icon {
+        width: 70px;
+        height: 70px;
+    }
+    .skill-icon-native {
+        width: 70px;
+        height: 80px;
+    }
 }
 
 @media screen and (max-width: 550px) {
@@ -173,6 +181,50 @@
     }
     .skill-icon {
         width: 60px;
+        height: 60px;
+    }
+    .skill-icon-native {
+        width: 60px;
+        height: 70px;
+    }
+    .intro-img {
+        margin-top: 50px;
+        width: 50%;
+    }
+}
+
+@media screen and (max-width: 470px) {
+    .intro {
+        margin-top: 20%;
+    }
+    .intro-left-wrapper {
+        padding: 20px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .intro-greetings {
+        font-size: 35px;
+    }
+    .intro-name {
+        font-size: 30px;
+    }
+    .intro-description {
+        font-size: 25px;
+        text-align: center;
+    }
+    .intro-skill-title {
+        font-size: 25px;
+    }
+    .intro-skills {
+        margin-left: -7px;
+    }
+    .skill-icon {
+        width: 50px;
+        height: 50px;
+    }
+    .skill-icon-native {
+        width: 50px;
         height: 60px;
     }
     .intro-img {
